tests/fixtures/semantic/invalid/type-mismatch.ck
module app.bad

fn f() -> String {
  return 42
}
